--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "doctrine/dbal": "~2.5",
     "laracasts/testdummy": "~2.0",
     "laracasts/flash": "~1.3",
+    "zizaco/entrust": "dev-laravel-5",
     "intervention/image": "2.2.0",
 	 "orangehill/iseed": "dev-master",
     "fzaninotto/faker": "^1.5"
