--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "yajra/laravel-datatables-oracle" : "~5.0",
     "doctrine/dbal": "~2.5",
     "laracasts/testdummy": "~2.0",
+    "maatwebsite/excel": "~2.0.0",
     "laracasts/flash": "~1.3",
     "zizaco/entrust": "dev-laravel-5",
     "intervention/image": "2.2.0",
