--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "laracasts/testdummy": "~2.0",
     "maatwebsite/excel": "~2.0.0",
     "laracasts/flash": "~1.3",
-    "zizaco/entrust": "dev-laravel-5",
+    "zizaco/entrust": "1.4.1",
     "intervention/image": "2.2.0",
 	 "orangehill/iseed": "dev-master",
     "fzaninotto/faker": "^1.5"
